# git-ibundle

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE.md  MAINTAINER.md  README.md
experiments/bundle-all/: Cargo.toml
experiments/bundle-all-git/: Cargo.toml
experiments/bundle-all-git/src/: main.rs
experiments/bundle-all/src/: main.rs
experiments/show-ref/: Cargo.toml
experiments/show-ref/src/: main.rs
repotests/: .gitignore  runrepotests.sh
repotests/example-vim/: .gitignore  run  setup
scripts/: make_release  repodiff
src/: main.rs
tests/: test_git_ibundle.rs
