[package]
name = "git-ibundle"
version = "0.1.1"
authors = ["Michael Henry <rust@drmikehenry.com>"]
edition = "2021"
description = "A tool for incremental offline mirroring of a Git repository"
repository = "https://github.com/drmikehenry/git-ibundle/"
license = "MIT"
keywords = ["incremental", "offline", "mirroring", "Git", "repository"]
categories = ["command-line-utilities"]
exclude = ["repotests", ".cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bstr = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
git2 = { version = "^0.16", default_features = false, features = ["vendored-libgit2"] }
tempfile = "3.3.0"
uuid = { version = "1.2.2", features = ["v4"] }
