[package]
name = "git-ibundle"
version = "0.2.1"
authors = ["Michael Henry <rust@drmikehenry.com>"]
edition = "2021"
description = "A tool for incremental offline mirroring of a Git repository"
repository = "https://github.com/drmikehenry/git-ibundle/"
license = "MIT"
keywords = ["incremental", "offline", "mirroring", "Git", "repository"]
categories = ["command-line-utilities"]
exclude = ["repotests", ".cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bstr = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
git2 = { version = "^0.16", default_features = false, features = ["vendored-libgit2"] }
log = "0.4.17"
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.8"
tempfile = "3.3.0"
